tests/snapshots/integration__integration_tests__spacing_edge_cases__alignment_empty_diffs.snap
---
source: tests/integration_tests/spacing_edge_cases.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "180"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpcZqocT/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
Branch           Working ±  Main ↕  State  Path               Remote ↕  Commit    Age            Message                                        
[1m[35mmain           [0m                            [1m[35m./test-repo      [0m            [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m                                 
[2malso-no-changes[0m                            [2m./also-no-changes[0m            [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m                                 
[2mno-changes     [0m                            [2m./no-changes     [0m            [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m                                 
with-changes         [32m+1[0m [31m-1[0m                 ./with-changes               [2mb834638e[0m  [2m10 months ago[0m  [2mInitial commit[0m                                 

[2mShowing 4 worktrees, 1 with changes[0m

----- stderr -----
